added all fixes for bild

--- a/src/app/admin/admin-layout/admin-layout.component.html
+++ b/src/app/admin/admin-layout/admin-layout.component.html
@@ -14,13 +14,6 @@
       mat-list-item
       class="page"
       routerLinkActive="active"
-      routerLink="/admin/new-news"
-      >New News</a
-    >
-    <a
-      mat-list-item
-      class="page"
-      routerLinkActive="active"
       routerLink="/admin/pages"
       >Users</a
     >
@@ -28,7 +21,7 @@
       mat-list-item
       class="page"
       href="#"
-      (click)="logout($event)"
+      (click)="logout()"
     >
       <mat-icon>logout</mat-icon>
     </a>
