--- a/src/app/admin/components/pages/pages.component.html
+++ b/src/app/admin/components/pages/pages.component.html
@@ -13,20 +13,20 @@
     </thead>
     <tbody>
       <tr *ngFor="let user of userList$ | async">
-        <th scope="row">{{ user.id }}</th>
-        <td>{{ user.username }}</td>
-        <td>{{ user.password }}</td>
-        <td>{{ user.role }}</td>
+        <th scope="row">{{user.id}}</th>
+        <td>{{user.username}}</td>
+        <td>{{user.password}}</td>
+        <td>{{user.role}}</td>
         <td class="edit">
           <button
             mat-button
-            (click)="onDeleteUser(user)"
+            (click)="deleteUser(user)"
           >
             <mat-icon>delete</mat-icon>
           </button>
           <button
             mat-button
-            (click)="onEditUser(user)"
+            (click)="editUser(user)"
           >
             <mat-icon>edit</mat-icon>
           </button>
