--- a/src/app/components/newsitem/newsitem.component.html
+++ b/src/app/components/newsitem/newsitem.component.html
@@ -8,25 +8,25 @@
         mat-card-image
         *ngIf="item.imgUrl"
         class="imageNews"
-        src="{{ item.imgUrl }}"
+        src="{{item.imgUrl}}"
         alt="img"
       />
     </mat-card-content>
     <div class="info-wrapper">
       <mat-card-header>
-        <mat-card-title class="news-name">{{ item.title }}</mat-card-title>
+        <mat-card-title class="news-name">{{item.title}}</mat-card-title>
         <mat-card-subtitle></mat-card-subtitle>
       </mat-card-header>
       <mat-card-content ng-controller="myAppCtrl">
-        <div [title]="item.full">{{ news }}</div>
+        <div [title]="item.full">{{news}}</div>
       </mat-card-content>
       <mat-card-actions>
         <button
-          *ngIf="unnecessaryBtn()"
+          *ngIf="hidingBtn()"
           mat-button
           (click)="toggleFull()"
         >
-          <a class="news-link">{{ btnName }}</a>
+          <a class="news-link">{{btnName}}</a>
         </button>
       </mat-card-actions>
     </div>
@@ -40,7 +40,7 @@
     >
     <mat-icon
       class="btn-hide"
-      (click)="onEditNews(item)"
+      (click)="onEditNews()"
       >edit</mat-icon
     >
   </div>
