added material table for AdminModule. Transfer new-news.component to UserModule. Fixes errors. Creation server for news

--- a/src/app/admin/components/pages/pages.component.html
+++ b/src/app/admin/components/pages/pages.component.html
@@ -18,10 +18,10 @@
       <td>{{user.password}}</td>
       <td>{{user.role}}</td>
       <td class="edit">
-        <button mat-button (click)="onDeleteUser(user)">
+        <button mat-button (click)="deleteUser(user)">
           <mat-icon>delete</mat-icon>
         </button>
-        <button mat-button (click)="onEditUser(user)">
+        <button mat-button (click)="editUser(user)">
           <mat-icon>edit</mat-icon>
         </button>
       </td>
