--- a/src/app/components/authorization/authorization.component.html
+++ b/src/app/components/authorization/authorization.component.html
@@ -6,7 +6,7 @@
             <mat-form-field class="form-input">
                 <mat-label>Username:</mat-label>
                 <input matInput type="text" formControlName="username">
-              <mat-error *ngIf="userValue?.errors?.['required']">Field cannnot be empty</mat-error>
+              <mat-error *ngIf="userValue?.errors?.['required']">Field cannot be empty</mat-error>
             </mat-form-field>
 
             <mat-form-field class="form-input">
