--- a/src/app/admin/components/list-of-users/list-of-users.component.html
+++ b/src/app/admin/components/list-of-users/list-of-users.component.html
@@ -1,38 +1,54 @@
-<!--<h2 class="title mt-3">Pages</h2>-->
+<h2 class="title mt-3">Pages</h2>
 
-<!--<div class="table-wrapper">-->
+<div class="table-wrapper">
+  <mat-form-field class="d-block">
+    <mat-label> Filter </mat-label>
+    <input  matInput (keyup)= "applyFilter($event)"  placeholder = "Ex. Mia" #input>
+  </mat-form-field>
 
-<!--<table mat-table [dataSource]="userList$" class="mat-elevation-z8">-->
+<table mat-table [dataSource]="userList$" class="mat-elevation-z8">
 
-<!--  &lt;!&ndash;- Note that these columns can be defined in any order.-->
-<!--        The actual rendered columns are set as a property on the row definition" &ndash;&gt;-->
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> ID </th>
+    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+  </ng-container>
 
-<!--  &lt;!&ndash; Position Column &ndash;&gt;-->
-<!--  <ng-container matColumnDef="position">-->
-<!--    <th mat-header-cell *matHeaderCellDef> ID </th>-->
-<!--    <td mat-cell *matCellDef="let element"> {{element.id}} </td>-->
-<!--  </ng-container>-->
+  <ng-container matColumnDef="username">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> USERNAME </th>
+    <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+  </ng-container>
 
-<!--  &lt;!&ndash; Name Column &ndash;&gt;-->
-<!--  <ng-container matColumnDef="name">-->
-<!--    <th mat-header-cell *matHeaderCellDef> USERNAME </th>-->
-<!--    <td mat-cell *matCellDef="let element"> {{element.username}} </td>-->
-<!--  </ng-container>-->
+  <ng-container matColumnDef="role">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> ROLE </th>
+    <td mat-cell *matCellDef="let element"> {{element.role}} </td>
+  </ng-container>
 
-<!--  &lt;!&ndash; Weight Column &ndash;&gt;-->
-<!--  <ng-container matColumnDef="weight">-->
-<!--    <th mat-header-cell *matHeaderCellDef> ROLE </th>-->
-<!--    <td mat-cell *matCellDef="let element"> {{element.role}} </td>-->
-<!--  </ng-container>-->
+  <ng-container matColumnDef="password">
+    <th mat-header-cell *matHeaderCellDef> PASSWORD </th>
+    <td mat-cell *matCellDef="let element"> {{element.password}} </td>
+  </ng-container>
 
-<!--  &lt;!&ndash; Symbol Column &ndash;&gt;-->
-<!--  <ng-container matColumnDef="symbol">-->
-<!--    <th mat-header-cell *matHeaderCellDef> PASSWORD </th>-->
-<!--    <td mat-cell *matCellDef="let element"> {{element.password}} </td>-->
-<!--  </ng-container>-->
+  <ng-container matColumnDef="symbol">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-button (click)="onDeleteUser(element)">
+        <mat-icon>delete</mat-icon>
+      </button>
+      <button mat-button (click)="onEditUser(element)">
+        <mat-icon>edit</mat-icon>
+      </button>
+    </td>
+  </ng-container>
 
-<!--  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>-->
-<!--  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>-->
-<!--</table>-->
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-<!--</div>-->
+  <tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+  </tr>
+</table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" aria-label="Select page of users"></mat-paginator>
+
+  <p class="text-danger mt-3" *ngIf="notAdmin">Admin cannot be edited or deleted!</p>
+</div>
