--- a/src/app/components/new-news/new-news.component.html
+++ b/src/app/components/new-news/new-news.component.html
@@ -1,6 +1,6 @@
 <h2 class="title mt-3">New News</h2>
 
-<button mat-raised-button class="btn" color="warn" (click)="goToNews()">
+<button mat-raised-button class="btn" color="primary" (click)="goToNews()">
   Go to news
 </button>
 
@@ -25,13 +25,12 @@
             <mat-form-field class="form-input">
                 <mat-label>Img Url:</mat-label>
                 <input matInput formControlName="imgUrl" class=" img-block">
-                <img mat-card-image *ngIf="imgUrl.value" class="preview" [src]="imgPreviw" width="30" height="30" alt="img">
+                <img mat-card-image *ngIf="imgUrl.value" class="preview" [src]="imgPreview" width="30" height="30" alt="img">
                     <mat-error *ngIf="imgUrlValue?.errors?.['required']">Add Image</mat-error>
             </mat-form-field>
             <mat-divider></mat-divider>
 
-            <button mat-raised-button class="btn-form" [disabled]="form.invalid" type="button" (click)="addNews()">{{
-                btnName }}</button>
+            <button mat-raised-button class="btn-form" [disabled]="form.invalid" type="button" (click)="addNews()">{{btnName}}</button>
             <button mat-raised-button class="btn-form" type="reset">Clear</button>
         </form>
     </mat-card-content>
