--- a/src/app/main-layout/main-layout.component.scss
+++ b/src/app/main-layout/main-layout.component.scss
@@ -2,6 +2,9 @@
   padding: 0 1rem;
   height: 5rem;
   justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  list-style-type: none
 }
 
 .title {
@@ -17,12 +20,6 @@
   padding: 2.5rem 1rem;
 }
 
-.nav {
-  display: flex;
-  flex-direction: row;
-  list-style-type: none;
-}
-
 mat-sidenav-container {
   height: 100%;
 }
@@ -32,6 +29,6 @@ mat-grid-tile {
 }
 
 mat-sidenav {
-  background-color: rgb(84, 117, 224);
+  background-color: #5475E0;
   width: 20rem;
 }
