--- a/src/app/user-layout/user-layout.component.html
+++ b/src/app/user-layout/user-layout.component.html
@@ -7,6 +7,7 @@
     </a>
     <a mat-list-item class="page" routerLinkActive="active" routerLink="/about">About us</a>
     <a mat-list-item class="page" routerLinkActive="active" routerLink="/news">News</a>
+    <a mat-list-item class="page" routerLinkActive="active" routerLink="/new-news">New News</a>
     <a mat-list-item class="page" href="#" (click)="logout($event)">
       <mat-icon>logout</mat-icon>
     </a>
