added lint fixes

--- a/src/app/admin/components/pages/pages.component.html
+++ b/src/app/admin/components/pages/pages.component.html
@@ -42,5 +42,10 @@
     Admin cannot be edited or deleted!
   </p>
 
-  <p class="text-danger" *ngIf="notAdmin">Admin cannot be edited or deleted!</p>
+  <p
+    class="text-danger"
+    *ngIf="notAdmin"
+  >
+    Admin cannot be edited or deleted!
+  </p>
 </div>
