--- a/src/app/admin/components/list-of-users/list-of-users.component.html
+++ b/src/app/admin/components/list-of-users/list-of-users.component.html
@@ -3,52 +3,136 @@
 <div class="table-wrapper">
   <mat-form-field class="d-block">
     <mat-label> Filter </mat-label>
-    <input  matInput (keyup)= "applyFilter($event)"  placeholder = "Ex. Mia" #input>
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Ex. Mia"
+      #input
+    />
   </mat-form-field>
 
-<table mat-table [dataSource]="userList$" class="mat-elevation-z8">
+  <table
+    mat-table
+    [dataSource]="userList$"
+    class="mat-elevation-z8"
+  >
+    <ng-container matColumnDef="id">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+      >
+        ID
+      </th>
+      <td
+        mat-cell
+        *matCellDef="let element"
+      >
+        {{element.id}}
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> ID </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-  </ng-container>
+    <ng-container matColumnDef="username">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+      >
+        USERNAME
+      </th>
+      <td
+        mat-cell
+        *matCellDef="let element"
+      >
+        {{element.username}}
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="username">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> USERNAME </th>
-    <td mat-cell *matCellDef="let element"> {{element.username}} </td>
-  </ng-container>
+    <ng-container matColumnDef="role">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+      >
+        ROLE
+      </th>
+      <td
+        mat-cell
+        *matCellDef="let element"
+      >
+        {{element.role}}
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="role">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> ROLE </th>
-    <td mat-cell *matCellDef="let element"> {{element.role}} </td>
-  </ng-container>
+    <ng-container matColumnDef="password">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+      >
+        PASSWORD
+      </th>
+      <td
+        mat-cell
+        *matCellDef="let element"
+      >
+        {{element.password}}
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="password">
-    <th mat-header-cell *matHeaderCellDef> PASSWORD </th>
-    <td mat-cell *matCellDef="let element"> {{element.password}} </td>
-  </ng-container>
+    <ng-container matColumnDef="symbol">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+      ></th>
+      <td
+        mat-cell
+        *matCellDef="let element"
+      >
+        <button
+          mat-button
+          (click)="onDeleteUser(element)"
+        >
+          <mat-icon>delete</mat-icon>
+        </button>
+        <button
+          mat-button
+          (click)="onEditUser(element)"
+        >
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element">
-      <button mat-button (click)="onDeleteUser(element)">
-        <mat-icon>delete</mat-icon>
-      </button>
-      <button mat-button (click)="onEditUser(element)">
-        <mat-icon>edit</mat-icon>
-      </button>
-    </td>
-  </ng-container>
+    <tr
+      mat-header-row
+      *matHeaderRowDef="displayedColumns"
+    ></tr>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: displayedColumns;"
+    ></tr>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr
+      class="mat-row"
+      *matNoDataRow
+    >
+      <td
+        class="mat-cell"
+        colspan="4"
+      >
+        No data matching the filter "{{input.value}}"
+      </td>
+    </tr>
+  </table>
 
-  <tr class="mat-row" *matNoDataRow>
-    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-  </tr>
-</table>
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 20]"
+    aria-label="Select page of users"
+  ></mat-paginator>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" aria-label="Select page of users"></mat-paginator>
-
-  <p class="text-danger mt-3" *ngIf="notAdmin">Admin cannot be edited or deleted!</p>
+  <p
+    class="text-danger mt-3"
+    *ngIf="notAdmin"
+  >
+    Admin cannot be edited or deleted!
+  </p>
 </div>
