--- a/src/app/components/new-news/new-news.component.html
+++ b/src/app/components/new-news/new-news.component.html
@@ -54,8 +54,22 @@
       </mat-form-field>
       <mat-divider></mat-divider>
 
-            <button mat-raised-button class="btn-form" [disabled]="form.invalid" type="button" (click)="addNews()">{{btnName}}</button>
-            <button mat-raised-button class="btn-form" type="reset">Clear</button>
-        </form>
-    </mat-card-content>
+      <button
+        mat-raised-button
+        class="btn-form"
+        [disabled]="form.invalid"
+        type="button"
+        (click)="addNews()"
+      >
+        {{btnName}}
+      </button>
+      <button
+        mat-raised-button
+        class="btn-form"
+        type="reset"
+      >
+        Clear
+      </button>
+    </form>
+  </mat-card-content>
 </mat-card>
