--- a/src/app/main-layout/main-layout.component.scss
+++ b/src/app/main-layout/main-layout.component.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   display: flex;
   flex-direction: row;
-  list-style-type: none
+  list-style-type: none;
 }
 
 .title {
@@ -29,6 +29,6 @@ mat-grid-tile {
 }
 
 mat-sidenav {
-  background-color: #5475E0;
+  background-color: #5475e0;
   width: 20rem;
 }
