--- a/src/app/user-layout/user-layout.component.html
+++ b/src/app/user-layout/user-layout.component.html
@@ -24,9 +24,24 @@
       routerLinkActive="active"
       routerLink="/about"
       >About us</a
-    ><a mat-list-item class="page" routerLinkActive="active" routerLink="/news">News</a>
-    <a mat-list-item class="page" routerLinkActive="active" routerLink="/new-news">New News</a>
-    <a mat-list-item class="page" href="#"
+    ><a
+      mat-list-item
+      class="page"
+      routerLinkActive="active"
+      routerLink="/news"
+      >News</a
+    >
+    <a
+      mat-list-item
+      class="page"
+      routerLinkActive="active"
+      routerLink="/new-news"
+      >New News</a
+    >
+    <a
+      mat-list-item
+      class="page"
+      href="#"
       (click)="logout($event)"
     >
       <mat-icon>logout</mat-icon>
