--- a/src/app/main-layout/main-layout.component.scss
+++ b/src/app/main-layout/main-layout.component.scss
@@ -11,11 +11,11 @@
   font-size: 2rem;
   font-weight: bold;
   text-decoration-line: none;
-  color: #fff;
+  color: var(--header-text-color);
 }
 
 .page {
-  color: #fff;
+  color: var(--header-text-color);
   width: fit-content;
   padding: 2.5rem 1rem;
 }
@@ -29,6 +29,6 @@ mat-grid-tile {
 }
 
 mat-sidenav {
-  background-color: #5475e0;
+  background-color: var(--header-bg);
   width: 20rem;
 }
