--- a/src/app/user-layout/user-layout.component.scss
+++ b/src/app/user-layout/user-layout.component.scss
@@ -8,11 +8,11 @@
   font-size: 2rem;
   font-weight: bold;
   text-decoration-line: none;
-  color: #fff;
+  color: var(--header-text-color);
 }
 
 .page {
-  color: #fff;
+  color: var(--header-text-color);
   width: fit-content;
   padding: 2.5rem 1rem;
 }
@@ -32,6 +32,6 @@ mat-grid-tile {
 }
 
 mat-sidenav {
-  background-color: rgb(84, 117, 224);
+  background-color: var(--header-bg);
   width: 20rem;
 }
