added filter and pagination for Table in AdminModule

--- a/src/app/admin/admin-layout/admin-layout.component.html
+++ b/src/app/admin/admin-layout/admin-layout.component.html
@@ -20,6 +20,13 @@
     <a
       mat-list-item
       class="page"
+      routerLinkActive="active"
+      routerLink="/admin/list"
+    >Table of Users</a
+    >
+    <a
+      mat-list-item
+      class="page"
       href="#"
       (click)="logout()"
     >
