added filter and pagination for Table in AdminModule. added spacing between image and text

--- a/src/app/admin/admin-layout/admin-layout.component.html
+++ b/src/app/admin/admin-layout/admin-layout.component.html
@@ -21,8 +21,15 @@
       mat-list-item
       class="page"
       routerLinkActive="active"
+      routerLink="/home"
+    >Visit site as admin</a
+    >
+    <a
+      mat-list-item
+      class="page"
+      routerLinkActive="active"
       routerLink="/admin/list"
-    >Table of Users</a
+      >Table of Users</a
     >
     <a
       mat-list-item
