--- a/src/app/components/authorization/authorization.component.html
+++ b/src/app/components/authorization/authorization.component.html
@@ -1,10 +1,10 @@
-<h2 class="title mt-3">Authorization</h2>
+<h2 class="title mt-3">Authorization:</h2>
 
 <mat-card class="container">
   <mat-card-content>
     <form [formGroup]="userForm">
       <mat-form-field class="form-input">
-        <mat-label>Username:</mat-label>
+        <mat-label>Username is:</mat-label>
         <input
           matInput
           type="text"
