--- a/src/app/components/authorization/authorization.component.html
+++ b/src/app/components/authorization/authorization.component.html
@@ -4,7 +4,7 @@
   <mat-card-content>
     <form [formGroup]="userForm">
       <mat-form-field class="form-input">
-        <mat-label>Username is:</mat-label>
+        <mat-label>Username:</mat-label>
         <input
           matInput
           type="text"
