--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
     class="welcome"
     *ngIf="userTitle !== undefined"
   >
-    Welcome, my friend {{userTitle}}!
+    Welcome, my friend {{userTitle}}
   </p>
-  <p> date: {{new | date}}</p>
+  <p>{{new | date}}</p>
 </div>
