--- a/src/app/components/authorization/authorization.component.html
+++ b/src/app/components/authorization/authorization.component.html
@@ -4,7 +4,7 @@
   <mat-card-content>
     <form [formGroup]="userForm">
       <mat-form-field class="form-input">
-        <mat-label>Username is:</mat-label>
+        <mat-label>Username:</mat-label>
         <input
           matInput
           type="text"
@@ -20,7 +20,7 @@
           type="password"
           formControlName="password"
         />
-        <mat-error *ngIf="passwordValue?.errors?.['required']">Field can't be empty</mat-error>
+        <mat-error *ngIf="passwordValue?.errors?.['required']">Field can't be empty!</mat-error>
       </mat-form-field>
 
       <button
@@ -30,7 +30,7 @@
         type="button"
         (click)="login()"
       >
-        Sign In
+        SIGN IN
       </button>
       <hr />
       <button
@@ -41,7 +41,7 @@
       >
         Create a new account
       </button>
-      <mat-error *ngIf="notFound">User not found. You need to register.</mat-error>
+      <mat-error *ngIf="notFound">User not found! You need to register.</mat-error>
     </form>
   </mat-card-content>
 </mat-card>
