--- a/src/app/components/authorization/authorization.component.html
+++ b/src/app/components/authorization/authorization.component.html
@@ -20,7 +20,7 @@
           type="password"
           formControlName="password"
         />
-        <mat-error *ngIf="passwordValue?.errors?.['required']">Field can't be empty</mat-error>
+        <mat-error *ngIf="passwordValue?.errors?.['required']">Field can't be empty!</mat-error>
       </mat-form-field>
 
       <button
