--- a/src/app/components/authorization/authorization.component.html
+++ b/src/app/components/authorization/authorization.component.html
@@ -41,7 +41,7 @@
       >
         Create a new account
       </button>
-      <mat-error *ngIf="notFound">User not found. You need to register.</mat-error>
+      <mat-error *ngIf="notFound">User not found! You need to register.</mat-error>
     </form>
   </mat-card-content>
 </mat-card>
